Source/WebKitLegacy/mac/WebView/WebFrameViewPrivate.h
@@ -27,6 +27,9 @@
  */
 
 #import <WebKitLegacy/WebFrameView.h>
+#if TARGET_OS_IPHONE
+#import <WebKitLegacy/WAKAppKitStubs.h>
+#endif
 
 @interface WebFrameView (WebPrivate)
 
@@ -68,7 +71,11 @@
     @method _contentView
     @result The content view (NSClipView) of the WebFrameView's scroll view.
  */
+#if TARGET_OS_IPHONE
+- (WAKClipView *)_contentView;
+#else
 - (NSClipView *)_contentView;
+#endif
 
 /*!
     @method _customScrollViewClass
