Source/WebKitLegacy/mac/WebView/WebHTMLRepresentation.h
@@ -31,7 +31,9 @@
 #import <WebKitLegacy/WebDocumentPrivate.h>
 
 @class WebHTMLRepresentationPrivate;
+#if !TARGET_OS_IPHONE
 @class NSView;
+#endif
 
 @class DOMNode;
 @class DOMElement;
